# griptape-sample-structures

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_config.json
INTERNAL-agora/: README.md  requirements.txt  structure.py
aws-bill-pdf-to-csv/: README.md  requirements.txt
data-connector-template/: .env  .env.example  README.md  pre_install.sh  requirements.txt  runtime_dependency_install_file.sh  script.sh  structure.py
data-connector-unstructured/: README.md  requirements.txt  structure.py
griptape-aws-bill-pdf-to-csv/: README.md  download.py  requirements.txt  structure.py  structure_config.yaml  upload.py
griptape-chat-memory-agent/: README.md  requirements.txt  structure.py  structure_config.yaml
griptape-conversation-memory/: README.md  requirements.txt  structure.py  structure_config.yaml
griptape-csv-filter/: README.md  requirements.txt  structure.py
griptape-deserialize-structure/: requirements.txt  structure.py
griptape-find-replace-transform/: README.md  requirements.txt  structure.py  structure_config.yml
griptape-model-switcher/: .env.example  README.md  requirements.txt  structure.py
griptape-multi-agent-workflows/: README.md  mega_structure.py  requirements.txt  researcher.py  structure_config_researcher.yaml  structure_config_workflow.yaml  structure_config_writer.yaml  workflow.py  writer.py
griptape-observability/: README.md  requirements.txt  structure.py
griptape-off-prompt/: README.md  requirements.txt  structure.py
griptape-ruleset-sync/: README.md  griptape_cloud_client.py  requirements.txt  (+3 more)
(+77 files in other folders)
