[project]
name = "griptape-sample-structures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "griptape[all]>=1.3.4",
    "python-dotenv>=1.0.1",
]
[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.35",
    "langchain-openai>=0.3.6",
]
slack = [
    "slack-bolt>=1.22.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "ruff>=0.9.6",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D101",
    "D102",
    "D103",
    "D104",
    "D203",
    "D212",
    "COM812",
    "D100",
    "PTH123",
    "PTH103",
    "PTH120",
    "ANN003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 120
